activate conda env

--- a/Dockerfolder/Dockerfile
+++ b/Dockerfolder/Dockerfile
@@ -1,11 +1,15 @@
 FROM continuumio/miniconda3:latest
 
-RUN tmux
-
 RUN apt-get update && apt-get install -y \
+    tmux \
     nginx \
     gunicorn
+
+CMD tmux
 
 RUN conda update conda -y && conda create -y --name mlapp \
     flask
 
+RUN source activate mlapp
+
+RUN mkdir /home/www
