conda env name change

--- a/deploy/dockerfolder/Dockerfile
+++ b/deploy/dockerfolder/Dockerfile
@@ -5,16 +5,20 @@ RUN apt-get update && apt-get install -y \
     vim \
     tmux \
     nginx \
-    gunicorn
+    gunicorn \
+    supervisor
 
-RUN conda update conda -y && conda create -y --name app_env \
-    flask
+RUN conda update conda -y && conda create -y --name webapp_env flask
+RUN source activate webapp_env
 
-RUN source activate app_env
-
-RUN git clone http://www.github.com/davluangu/mlapi
+RUN mkdir /home/www && cd /home/www
+RUN git clone http://www.github.com/davluangu/mlapi mlapi
 
 RUN /etc/init.d/nginx start
 RUN rm /etc/nginx/sites-enabled/default
-RUN touch /etc/nginx/sites-available/mlapi
+RUN cp /home/www/mlapi/deploy/nginx/mlapi /etc/nginx/sites-available/mlapi
 RUN ln -s /etc/nginx/sites-available/mlapi /etc/nginx/sites-enabled/mlapi
+RUN /etc/init.d/nginx restart
+
+RUN /home/www/mlapi/
+RUN gunicorn app:app -b localhost:8000
