--- a/deploy/dockerfolder/Dockerfile
+++ b/deploy/dockerfolder/Dockerfile
@@ -1,24 +1,37 @@
-FROM continuumio/miniconda3:latest
+FROM nginx
+
+# Force bash always
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
 RUN apt-get update && apt-get install -y \
+    htop \
     git \
     vim \
     tmux \
-    nginx \
     gunicorn \
     supervisor
 
-RUN conda update conda -y && conda create -y --name webapp_env flask
-RUN source activate webapp_env
+# Install miniconda for python 3
+RUN wget --quiet http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
+    bash Miniconda3-latest-Linux-x86_64.sh -b -p /opt/miniconda && \
+    rm Miniconda3-latest-Linux-x86_64.sh && \
+    chmod -R a+rx /opt/miniconda
 
-RUN mkdir /home/www && cd /home/www
-RUN git clone http://www.github.com/davluangu/mlapi mlapi
+RUN conda update -y conda
+
+RUN conda update conda -y
+RUN conda install -y flask
+RUN conda install -y --name webapp_env -c https://conda.anaconda.org/asmeurer gunicorn
+
+RUN mkdir /var/www && cd /var/www
+RUN git clone http://www.github.com/davluangu/mlapi /var/www/mlapi
 
 RUN /etc/init.d/nginx start
 RUN rm /etc/nginx/sites-enabled/default
-RUN cp /home/www/mlapi/deploy/nginx/mlapi /etc/nginx/sites-available/mlapi
+RUN cp /var/www/mlapi/deploy/nginx/mlapi /etc/nginx/sites-available/mlapi
 RUN ln -s /etc/nginx/sites-available/mlapi /etc/nginx/sites-enabled/mlapi
 RUN /etc/init.d/nginx restart
 
-RUN /home/www/mlapi/
+
+RUN cd /var/www/mlapi/
 RUN gunicorn app:app -b localhost:8000
