--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
     location /static {
-        alias  /var/www/mlapi/static/;
+        alias  /var/www/html/static/;
     }
 }
