add gunicorn to supervisor.conf

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,3 +9,7 @@ files = /etc/supervisor/conf.d/*.conf
 
 [program:nginx]
 command=/usr/sbin/nginx
+
+[program:gunicorn]
+command=/miniconda/bin/gunicorn app:app -b localhost:8000
+directory=/deploy/app
