--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,8 @@
+daemon off;
+
 server {
+    listen 80;
+
     location / {
         proxy_pass http://localhost:8000;
         proxy_set_header Host $host;
