--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,10 @@
+[supervisord]
+nodaemon=true
+
 [program:nginx]
 command=/usr/sbin/nginx
 
 [program:gunicorn]
 command=/miniconda/bin/gunicorn app:app -b localhost:8000
 directory=/var/www/html
+
