--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,6 +5,6 @@ nodaemon=true
 command=/usr/sbin/nginx
 
 [program:gunicorn]
-command=/miniconda/bin/gunicorn app:app -b localhost:8000
+command=/miniconda/bin/gunicorn app:app -b 0.0.0.0:8000
 directory=/var/www/html
 
